POFIM-152: IM innesending gjennom fp-inntektsmelding i verdikjede (#1503)